kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meta-image-generator
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - meta-image-generator.djnd.si
        - meta-image-generator.danesjenovdan.si
      secretName: meta-image-generator-tls
  rules:
    - host: meta-image-generator.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meta-image-generator
                port:
                  number: 3000
    - host: meta-image-generator.danesjenovdan.si
      http: *http_paths
